force-app/main/default/objects/ContactPolicyJunction__c/ContactPolicyJunction__c.object-meta.xml
<CustomObject>
    <label>Record</label>
    <nameField>
        <displayFormat>A-{000000000}</displayFormat>
        <label>ContactPolicyJunction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ContactPolicyJunction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>