force-app/main/default/objects/ContactPolicyJunction__c/fields/ContactPolicyJunctionExternalID__c.field-meta.xml
<CustomField>
    <fullName>ContactPolicyJunctionExternalID__c</fullName>
    <externalId>true</externalId>
    <label>ContactPolicyJunctionExternalID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>